feat(back): add get event service (#168)
