# back/docs/swagger.json
@@ -337,6 +337,82 @@
                     }
                 }
             }
+        },
+        "/v1/event/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Get event",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Event Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/event.EventResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ApiError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/event/{id}/join": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Join event",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Event Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ApiError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -390,9 +466,9 @@
             "type": "object",
             "required": [
                 "duration",
-                "ends_at",
+                "endsAt",
                 "name",
-                "starts_at"
+                "startsAt"
             ],
             "properties": {
                 "description": {
@@ -403,13 +479,13 @@
                     "maximum": 30240,
                     "minimum": 15
                 },
-                "ends_at": {
+                "endsAt": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
-                "starts_at": {
+                "startsAt": {
                     "type": "string"
                 }
             }
@@ -417,12 +493,6 @@
         "event.EventResponse": {
             "type": "object",
             "properties": {
-                "accounts": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Account"
-                    }
-                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -449,6 +519,12 @@
                             "$ref": "#/definitions/model.Account"
                         }
                     ]
+                },
+                "participants": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Account"
+                    }
                 },
                 "startsAt": {
                     "type": "string"
